<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

     <group
         android:checkableBehavior="single">
         <item
             android:id="@+id/Manage_Tasks"
             android:title="@string/manage_tasks"
             android:icon="@drawable/icontask">
         </item>
         <item
             android:id="@+id/Manage_prof"
             android:title="@string/manage_profile"
             android:icon="@drawable/iconprofile">
         </item>
         <item
             android:id="@+id/Manag_finance"
             android:title="@string/finance"
             android:icon="@drawable/menubar">
         </item>
         <item
             android:id="@+id/Manag_Documents"
             android:title="@string/doucuments"
             android:icon="@drawable/iconimage">
         </item>
         <item
             android:id="@+id/Special_customer"
             android:title="@string/special_customer"
             android:icon="@drawable/menubar">
         </item>
     </group>

    <item android:title="Profile">

        <menu>

         <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:title="@string/login"
            android:icon="@drawable/iconlogin">
        </item>
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/iconprofile">
        </item>
          <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/iconlogout">
        </item>
         </group>
    </menu>



    </item>


    <item android:title="@string/catogries">
        <menu>
            <group
                android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_Share"
                    android:title="@string/share_us"
                    android:icon="@drawable/iconrateus">
                </item>
                <item
                    android:id="@+id/nav_Rate"
                    android:title="@string/rate_us"
                    android:icon="@drawable/iconrateus">
                </item>

            </group>
        </menu>



    </item>



</menu>