<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.SplashScreen"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="139dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginTop="130dp"
        android:contentDescription="@string/app_logo"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/app_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/app_slogan"
        android:textSize="13sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/splashscreen_background"
        android:layout_width="match_parent"
        android:layout_height="268dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/splashscreen_background"
        app:srcCompat="@drawable/splashscreen_background_illust" />

    <TextView
        android:id="@+id/app_poweredby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/powered_by"
        android:textSize="14sp" />
</LinearLayout>